# RAG

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
config/: settings.example.yaml
examples/: ingest_request.json  query_request.json  query_response.json  retrieve_context_request.json  retrieve_context_response.json
src/waam_rag/: __init__.py  citations.py  config.py  domain.py  logging_utils.py  schemas.py
src/waam_rag/api/: app.py
src/waam_rag/indexing/: __init__.py  bm25.py  embeddings.py  repository.py
src/waam_rag/ingestion/: chunking.py  cleaning.py  enrichment.py  parser.py  quality.py  structure.py
src/waam_rag/retrieval/: extraction.py  fusion.py  query_builder.py  reranker.py  service.py
src/waam_rag/services/: __init__.py  rag_service.py
src/waam_rag/utils/: files.py  text.py
tests/: conftest.py
tests/integration/: test_api.py  test_ingest_query.py
tests/unit/: test_answerability_ranking.py  test_backward_compatibility.py  test_chunking.py  test_citations.py  test_cleaning.py  test_evidence_extraction.py  test_metadata.py  test_parameter_directionality.py  test_parser.py  test_reference_quality.py  test_retrieval.py
